crates/backyard-lexer/tests/snapshots/keywords__yield_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 361
expression: tokens
snapshot_kind: text
---
- token_type: Yield
  value: yield
  line: 1
  column: 0
  offset: 0
